[package]
name = "livedown"
version = "3.1.1"
edition = "2021"
authors = ["Livedown Rust Port"]
description = "Live Markdown previews for your favourite editor - Rust implementation"
license = "MIT"
repository = "https://github.com/shime/livedown"
keywords = ["markdown", "preview", "live", "editor", "realtime"]
categories = ["command-line-utilities", "text-processing", "web-programming"]

[[bin]]
name = "livedown"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.98"
axum = { version = "0.8.4", features = ["ws", "tower-log"] }
clap = { version = "4.5.40", features = ["derive"] }
futures-util = "0.3.31"
html-escape = "0.2.13"
include_dir = "0.7.4"
mime_guess = "2.0.5"
notify = "8.0.0"
open = "5.3.2"
path-absolutize = "3.1.1"
pulldown-cmark = { version = "0.13.0", features = ["html"] }
reqwest = { version = "0.12.20", default-features = false, features = ["rustls-tls"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
syntect = { version = "5.2.0", default-features = false, features = ["default-fancy"] }
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread", "fs", "io-util", "net"] }
tower = { version = "0.5.2", features = ["util"] }
tower-http = { version = "0.6.6", features = ["fs", "cors"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
socketioxide = "0.14"
regex = "1.10"

[profile.release]
# Optimize for size
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

# Remove debug info
debug = false

[profile.release.package."*"]
opt-level = "z"

[dev-dependencies]
tempfile = "3.20.0"
